# cli

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/cmds/: add.rs
src/utils/: fs.rs  log.rs
