[package]
name = "opensass"
version = "0.0.5"
edition = "2024"
description = """
🧩 A CLI to interact with the OpenSASS ecosystem.
"""
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
license = "MIT"
documentation = "https://docs.rs/opensass"
repository = "https://github.com/opensass/cli"
readme = "README.md"
categories = ["wasm", "command-line-utilities", "development-tools::build-utils"]
keywords = ["wasm", "rust", "cli", "components", "frontend"]
exclude = ["/assets"]

[[bin]]
name = "os"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
crates_io_api = "0.11.0"
flate2 = "1.1.1"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"] }
tar = "0.4.44"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"

[features]
default = []

[profile.release]
opt-level = "z"
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
